refactor: CongressmanServiceTest 리팩터링
- displayname 구체적으로 수정
- 상수 추출
- 매직 스트링 값 수정